--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(core_source_files
-        IWorksSpaceWrapper.h
+        IWorkspaceWrapper.h
         WorkspaceWrapper.cpp WorkspaceWrapper.h
-        IFitManager.cpp IFitManager.h)
+)
 
 add_library(core ${core_source_files})
 #target_link_libraries(core modules)
 target_link_libraries( core PUBLIC ${ROOT_LIBRARIES} )
+target_link_libraries( core PUBLIC fitter )
