--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -4,6 +4,6 @@ set(app_source_files
 
 add_library(app ${app_source_files})
 
-target_link_libraries(app PUBLIC fitter)
-target_link_libraries(app PUBLIC core)
+#target_link_libraries(app PUBLIC core)
 target_link_libraries( app PUBLIC ${ROOT_LIBRARIES} )
+target_link_libraries(app PUBLIC fitter)
