--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(utils_source_files
         WsPlotter.cpp
-        )
+        NpRankingPlotter.cpp NpRankingPlotter.h)
 
 add_library(utils ${utils_source_files})
 #target_link_libraries(core modules)
