--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -9,4 +9,5 @@ add_library(app ${app_source_files})
 
 #target_link_libraries(app PUBLIC core)
 target_link_libraries( app PUBLIC ${ROOT_LIBRARIES} )
+target_link_libraries(app PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(app PUBLIC fitter)
