--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(app_source_files
         IFitManager.cpp IFitManager.h
         FitManager.cpp FitManager.h
-        NpRankingStudyRes.cpp NpRankingStudyRes.h)
+        NpRankingStudyRes.cpp NpRankingStudyRes.h FitManagerConfig.h)
 
 include_directories(../Vendors)
 
@@ -11,3 +11,4 @@ add_library(app ${app_source_files})
 target_link_libraries( app PUBLIC ${ROOT_LIBRARIES} )
 target_link_libraries(app PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(app PUBLIC fitter)
+target_link_libraries(app PUBLIC core)
