--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -12,3 +12,4 @@ target_link_libraries( app PUBLIC ${ROOT_LIBRARIES} )
 target_link_libraries(app PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(app PUBLIC fitter)
 target_link_libraries(app PUBLIC core)
+target_link_libraries(app PUBLIC utils)
