Start Error decomposition work: enum files & refactored fittting

--- a/Fitter/CMakeLists.txt
+++ b/Fitter/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(fitter_source_files
         IFitter.h
         Fitter.cpp Fitter.h
-        IFitResult.cpp IFitResult.h)
+        IFitResult.cpp IFitResult.h ErrorsReEvaluation.h FitSettings.cpp FitSettings.h)
 
 add_library(fitter ${fitter_source_files})
 #target_link_libraries(core modules)
