--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(core_source_files
         IWorkspaceWrapper.h
         WorkspaceWrapper.cpp WorkspaceWrapper.h
-        CommandLineArgs.cpp CommandLineArgs.h Logger.h Logger.cpp)
+        CommandLineArgs.cpp CommandLineArgs.h Logger.h Logger.cpp Profiler.cpp Profiler.h)
 
 add_library(core ${core_source_files})
 #target_link_libraries(core modules)
