Refactor plotting: Adding Scene class + Latex wrapper

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -4,7 +4,8 @@ set(tester_source_files
         TestCommandLineArguments.cpp
         TestPlotterUtils.cpp
         TestRooFit.cpp
-        TestStringUtils.cpp TestWorkspaceWrapper.cpp)
+        TestStringUtils.cpp TestWorkspaceWrapper.cpp
+        TestScene.cpp)
 
 add_library(tester ${tester_source_files})
 #target_link_libraries(core modules)
