Add hesse prelim computation

--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -1,7 +1,11 @@
 set(app_source_files
         IFitManager.cpp IFitManager.h
         FitManager.cpp FitManager.h
-        NpRankingStudyRes.cpp NpRankingStudyRes.h FitManagerConfig.h RankingPlotterSettings.h Ranking/OneNpManager.cpp Ranking/OneNpManager.h Ranking/StudyRes.cpp Ranking/StudyRes.h)
+        NpRankingStudyRes.cpp NpRankingStudyRes.h
+        FitManagerConfig.h RankingPlotterSettings.h
+        Ranking/OneNpManager.cpp Ranking/OneNpManager.h
+        Ranking/StudyRes.cpp Ranking/StudyRes.h
+        HesseStudyResult.cpp HesseStudyResult.h)
 
 include_directories(../Vendors)
 
