Add tests. Optimise tests

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -4,8 +4,10 @@ set(tester_source_files
         TestCommandLineArguments.cpp
         TestPlotterUtils.cpp
         TestRooFit.cpp
-        TestStringUtils.cpp TestWorkspaceWrapper.cpp
-        TestScene.cpp)
+        TestStringUtils.cpp
+        TestWorkspaceWrapper.cpp
+        TestScene.cpp
+        TestFitManager.cpp)
 
 add_library(tester ${tester_source_files})
 #target_link_libraries(core modules)
