--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -12,6 +12,8 @@ set(app_source_files
 include_directories(../Vendors)
 include_directories(../Core)
 
+add_subdirectory(NllScans)
+
 add_library(app ${app_source_files})
 
 #target_link_libraries(app PUBLIC core)
@@ -20,3 +22,4 @@ target_link_libraries(app PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(app PUBLIC fitter)
 target_link_libraries(app PUBLIC core)
 target_link_libraries(app PUBLIC utils)
+target_link_libraries(app PUBLIC nllscans)
