add nll scans base

--- a/Application/NllScans/CMakeLists.txt
+++ b/Application/NllScans/CMakeLists.txt
@@ -3,6 +3,7 @@ set(nll_source_files
         PoiConfig.cpp
         NllScanManager.cpp
         Grid.cpp
+        PoiConfigBuilder.cpp
         )
 
 include_directories(../../Vendors)
