prelim support for Nll 1D plotting

--- a/Application/NllScans/CMakeLists.txt
+++ b/Application/NllScans/CMakeLists.txt
@@ -4,6 +4,7 @@ set(nll_source_files
         NllScanManager.cpp
         Grid.cpp
         PoiConfigBuilder.cpp
+        NllScanPlotter.cpp
         )
 
 include_directories(../../Vendors)
